# minigrep

./: Cargo.toml  LICENSE-MIT  README.md
example_text/: .hidden_test.txt  test.txt
src/: lib.rs  main.rs  thread_pool.rs
