[package]
name = "minigrep"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A small copy of ripgrep"
readme = "README.md"
repository = "https://github.com/Libonet/minigrep"

[[bin]]
name = "mg"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.21", features = ["derive", "cargo"] }
colored = "2.1.0"
git2 = "0.19.0"
